--- a/modules/ROOT/pages/model.adoc
+++ b/modules/ROOT/pages/model.adoc
@@ -55,6 +55,10 @@ Each segment has a key label assigned, for bilateral bodies use the prefix "_r" 
 .Segments Labels
 image::df_segment_label.png[align=center, title-align=center]
 
+[[fig:df_segment_label]]
+.Segments Labels
+image::df_segment_labels.png[align=center, title-align=center]
+
 [[sec_angles]]
 == Angles definition
 
